Adicionei as cores grass e poison e a navegação entre telas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="rosinha">
+  <ion-toolbar color="dark">
     <ion-title>
       Pokedex App
     </ion-title>
@@ -12,7 +12,7 @@
 
   <ion-list>
 
-    <ion-item lines="full" class="ion-no-padding">
+    <ion-item lines="full" class="ion-no-padding" routerLink="/bulbasaur">
       <ion-thumbnail slot="start">
         <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png">
       </ion-thumbnail>
