--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,111 +8,29 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-searchbar placeholder="Buscar Pokemons"></ion-searchbar>
+  <ion-searchbar (ionChange)="buscarPokemon($event)" placeholder="Buscar Pokemons"></ion-searchbar>
 
   <ion-list>
 
-    <ion-item lines="full" class="ion-no-padding" routerLink="/bulbasaur">
+    <ion-item *ngFor="let pokemon of listaPokemonFiltrada" lines="full" class="ion-no-padding" routerLink="/bulbasaur">
       <ion-thumbnail slot="start">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png">
+        <img [src]="pokemon.foto">
       </ion-thumbnail>
       <ion-label>
         <div>
-          <h3>Bulbasaur</h3>
-          <ion-badge color="grass">Grass</ion-badge>
-          <ion-badge color="tertiary">Poison</ion-badge>
+          <h3>{{pokemon.nome}}</h3>
+          <ion-badge *ngFor="let tipo of pokemon.tipos" [color]="tipo | lowercase">
+          {{tipo}}
+        </ion-badge>
         </div>
       </ion-label>
 
-      <ion-chip color="success">
-        <ion-label>001</ion-label>
-      </ion-chip>
-    </ion-item>
-
-    <ion-item lines="full" class="ion-no-padding">
-      <ion-thumbnail slot="start">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png">
-      </ion-thumbnail>
-      <ion-label>
-        <div>
-          <h3>Ivysaur</h3>
-          <ion-badge color="grass">Grass</ion-badge>
-          <ion-badge color="tertiary">Poison</ion-badge>
-        </div>
-      </ion-label>
-
-      <ion-chip color="success">
-        <ion-label>002</ion-label>
-      </ion-chip>
-    </ion-item>
-
-    <ion-item lines="full" class="ion-no-padding">
-      <ion-thumbnail slot="start">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png">
-      </ion-thumbnail>
-      <ion-label>
-        <div>
-          <h3>Venusaur</h3>
-          <ion-badge color="grass">Grass</ion-badge>
-          <ion-badge color="tertiary">Poison</ion-badge>
-        </div>
-      </ion-label>
-
-      <ion-chip color="success">
-        <ion-label>003</ion-label>
-      </ion-chip>
-    </ion-item>
-
-    <ion-item lines="full" class="ion-no-padding">
-      <ion-thumbnail slot="start">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png">
-      </ion-thumbnail>
-      <ion-label>
-        <div>
-          <h3>Charmander</h3>
-          <ion-badge color="fire">Fire</ion-badge>
-        </div>
-      </ion-label>
-
-      <ion-chip color="fire">
-        <ion-label>004</ion-label>
-      </ion-chip>
-    </ion-item>
-
-    <ion-item lines="full" class="ion-no-padding">
-      <ion-thumbnail slot="start">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/005.png">
-      </ion-thumbnail>
-      <ion-label>
-        <div>
-          <h3>Charmeleon</h3>
-          <ion-badge color="fire">Fire</ion-badge>
-        </div>
-      </ion-label>
-
-      <ion-chip color="fire">
-        <ion-label>005</ion-label>
-      </ion-chip>
-    </ion-item>
-
-    <ion-item lines="full" class="ion-no-padding">
-      <ion-thumbnail slot="start">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png">
-      </ion-thumbnail>
-      <ion-label>
-        <div>
-          <h3>Charizard</h3>
-          <ion-badge color="fire">Fire</ion-badge>
-          <ion-badge color="flying">Flying</ion-badge>
-        </div>
-      </ion-label>
-
-      <ion-chip color="fire">
-        <ion-label>006</ion-label>
+      <ion-chip [color]="pokemon.tipos[0] | lowercase">
+        <ion-label>{{pokemon.numero}}</ion-label>
       </ion-chip>
     </ion-item>
 
 
-  </ion-list>
+ </ion-list>
 
 </ion-content>
