--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -96,8 +96,8 @@
  /** fire **/
  --ion-color-fire: #fd7d24;
  --ion-color-fire-rgb: 253,125,36;
- --ion-color-fire-contrast: #000000;
- --ion-color-fire-contrast-rgb: 0,0,0;
+ --ion-color-fire-contrast: #ffffff;
+ --ion-color-fire-contrast-rgb: 255,255,255;
  --ion-color-fire-shade: #df6e20;
  --ion-color-fire-tint: #fd8a3a;
 
@@ -112,16 +112,16 @@
  /** water **/
  --ion-color-water: #4592c4;
  --ion-color-water-rgb: 69,146,196;
- --ion-color-water-contrast: #000000;
- --ion-color-water-contrast-rgb: 0,0,0;
+ --ion-color-water-contrast: #ffffff;
+ --ion-color-water-contrast-rgb: 255,255,255;
  --ion-color-water-shade: #3d80ac;
  --ion-color-water-tint: #589dca;
 
  /** bug **/
  --ion-color-bug: #729f3f;
   --ion-color-bug-rgb: 114,159,63;
-  --ion-color-bug-contrast: #000000;
-  --ion-color-bug-contrast-rgb: 0,0,0;
+  --ion-color-bug-contrast: #ffffff;
+  --ion-color-bug-contrast-rgb: 255,255,255;
   --ion-color-bug-shade: #648c37;
   --ion-color-bug-tint: #80a952;
 
@@ -156,6 +156,70 @@
   --ion-color-fairy-contrast-rgb: 0,0,0;
   --ion-color-fairy-shade: #dfa3cd;
   --ion-color-fairy-tint: #fdc0eb;
+
+  /** fighting **/
+  --ion-color-fighting: #d56723;
+  --ion-color-fighting-rgb: 213,103,35;
+  --ion-color-fighting-contrast: #ffffff;
+  --ion-color-fighting-contrast-rgb: 255,255,255;
+  --ion-color-fighting-shade: #bb5b1f;
+  --ion-color-fighting-tint: #d97639;
+
+  /** physic **/
+  --ion-color-physic: #f366b9;
+  --ion-color-physic-rgb: 243,102,185;
+  --ion-color-physic-contrast: #ffffff;
+  --ion-color-physic-contrast-rgb: 255,255,255;
+  --ion-color-physic-shade: #d65aa3;
+  --ion-color-physic-tint: #f475c0;
+
+  /** rock **/
+  --ion-color-rock: #a38c21;
+  --ion-color-rock-rgb: 163,140,33;
+  --ion-color-rock-contrast: #ffffff;
+  --ion-color-rock-contrast-rgb: 255,255,255;
+  --ion-color-rock-shade: #8f7b1d;
+  --ion-color-rock-tint: #ac9837;
+
+  /** steel **/
+  --ion-color-steel: #9eb7b8;
+  --ion-color-steel-rgb: 158,183,184;
+  --ion-color-steel-contrast: #000000;
+  --ion-color-steel-contrast-rgb: 0,0,0;
+  --ion-color-steel-shade: #8ba1a2;
+  --ion-color-steel-tint: #a8bebf;
+
+  /** ice **/
+  --ion-color-ice: #51c4e7;
+  --ion-color-ice-rgb: 81,196,231;
+  --ion-color-ice-contrast: #000000;
+  --ion-color-ice-contrast-rgb: 0,0,0;
+  --ion-color-ice-shade: #47accb;
+  --ion-color-ice-tint: #62cae9;
+
+  /** ghost **/
+  --ion-color-ghost: #7b62a3;
+  --ion-color-ghost-rgb: 123,98,163;
+  --ion-color-ghost-contrast: #ffffff;
+  --ion-color-ghost-contrast-rgb: 255,255,255;
+  --ion-color-ghost-shade: #6c568f;
+  --ion-color-ghost-tint: #8872ac;
+
+  /** dragon **/
+  --ion-color-dragon: #53a4cf;
+  --ion-color-dragon-rgb: 83,164,207;
+  --ion-color-dragon-contrast: #ffffff;
+  --ion-color-dragon-contrast-rgb: 255,255,255;
+  --ion-color-dragon-shade: #4990b6;
+  --ion-color-dragon-tint: #64add4;
+
+  /** dark **/
+  --ion-color-dark: #707070;
+  --ion-color-dark-rgb: 112,112,112;
+  --ion-color-dark-contrast: #ffffff;
+  --ion-color-dark-contrast-rgb: 255,255,255;
+  --ion-color-dark-shade: #636363;
+  --ion-color-dark-tint: #7e7e7e;
 }
 
 
@@ -248,4 +312,76 @@
   --ion-color-contrast-rgb: var(--ion-color-fairy-contrast-rgb);
   --ion-color-shade: var(--ion-color-fairy-shade);
   --ion-color-tint: var(--ion-color-fairy-tint);
+}
+
+.ion-color-fighting {
+  --ion-color-base: var(--ion-color-fighting);
+  --ion-color-base-rgb: var(--ion-color-fighting-rgb);
+  --ion-color-contrast: var(--ion-color-fighting-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-fighting-contrast-rgb);
+  --ion-color-shade: var(--ion-color-fighting-shade);
+  --ion-color-tint: var(--ion-color-fighting-tint);
+}
+
+.ion-color-physic {
+  --ion-color-base: var(--ion-color-physic);
+  --ion-color-base-rgb: var(--ion-color-physic-rgb);
+  --ion-color-contrast: var(--ion-color-physic-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-physic-contrast-rgb);
+  --ion-color-shade: var(--ion-color-physic-shade);
+  --ion-color-tint: var(--ion-color-physic-tint);
+}
+
+.ion-color-rock {
+  --ion-color-base: var(--ion-color-rock);
+  --ion-color-base-rgb: var(--ion-color-rock-rgb);
+  --ion-color-contrast: var(--ion-color-rock-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-rock-contrast-rgb);
+  --ion-color-shade: var(--ion-color-rock-shade);
+  --ion-color-tint: var(--ion-color-rock-tint);
+}
+
+.ion-color-steel {
+  --ion-color-base: var(--ion-color-steel);
+  --ion-color-base-rgb: var(--ion-color-steel-rgb);
+  --ion-color-contrast: var(--ion-color-steel-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-steel-contrast-rgb);
+  --ion-color-shade: var(--ion-color-steel-shade);
+  --ion-color-tint: var(--ion-color-steel-tint);
+}
+
+.ion-color-ice {
+  --ion-color-base: var(--ion-color-ice);
+  --ion-color-base-rgb: var(--ion-color-ice-rgb);
+  --ion-color-contrast: var(--ion-color-ice-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-ice-contrast-rgb);
+  --ion-color-shade: var(--ion-color-ice-shade);
+  --ion-color-tint: var(--ion-color-ice-tint);
+}
+
+.ion-color-ghost {
+  --ion-color-base: var(--ion-color-ghost);
+  --ion-color-base-rgb: var(--ion-color-ghost-rgb);
+  --ion-color-contrast: var(--ion-color-ghost-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-ghost-contrast-rgb);
+  --ion-color-shade: var(--ion-color-ghost-shade);
+  --ion-color-tint: var(--ion-color-ghost-tint);
+}
+
+.ion-color-dragon {
+  --ion-color-base: var(--ion-color-dragon);
+  --ion-color-base-rgb: var(--ion-color-dragon-rgb);
+  --ion-color-contrast: var(--ion-color-dragon-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-dragon-contrast-rgb);
+  --ion-color-shade: var(--ion-color-dragon-shade);
+  --ion-color-tint: var(--ion-color-dragon-tint);
+}
+
+.ion-color-dark {
+  --ion-color-base: var(--ion-color-dark);
+  --ion-color-base-rgb: var(--ion-color-dark-rgb);
+  --ion-color-contrast: var(--ion-color-dark-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-dark-contrast-rgb);
+  --ion-color-shade: var(--ion-color-dark-shade);
+  --ion-color-tint: var(--ion-color-dark-tint);
 }
