--- a/src/app/pokemons/bulbasaur/bulbasaur.page.scss
+++ b/src/app/pokemons/bulbasaur/bulbasaur.page.scss
@@ -1,25 +1,18 @@
+* {
+  background-color: white;
+}
+
 h4 {
   font-size: 16px;
   font-weight: bold;
+  color: black;
 }
 
-.versions {
-  background-color: #30a7d7 ;
-  border-radius: 10px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+ion-button {
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.col-sm-4 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-h5 {
-  color: white;
-  margin-right: 5px;
-  font-size: 14px;
-}
 
 
 
